[Bug #77516] - ATDW Highlights - Address not showing in the ATDW product

--- a/tourismaustralia-styleguide/assets/scss/site/_layout.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/_layout.scss
@@ -706,6 +706,10 @@ $footerBackgroundColour: #0a334c;
   left: 0;
   display: block;
 }
+.l-relative {
+  position: relative;
+}
+
 //////////////////////////////////////////
 // Bootstrap Row/Column Adjusters
 
