--- a/tourismaustralia-styleguide/assets/scss/site/modules/_icons.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_icons.scss
@@ -270,6 +270,14 @@
   top: 8px;
 }
 
+.icon-arrow-down-view-more {
+  color: #00535e;
+  font-size: 1.5em;
+  line-height: 0;
+  bottom: 8px;
+  position: absolute;
+}
+
 ///*
 // * Icon Decorations:
 // * ---------------------------------------------------------------------------------------------------------------- */
